Fix double arrows in failures table
Also add right padding to last column in tables to avoid scrollbar
overlap.

--- a/app/assets/stylesheets/table.scss
+++ b/app/assets/stylesheets/table.scss
@@ -69,6 +69,17 @@ article table {
         text-align:right;
     }
 
+    th,
+    td {
+        &.numeric {
+            text-align: right;
+        }
+        &:last-child {
+            border-right:0;
+            padding-right: 1em;
+        }
+    }
+
     th {
         border-top:0;
         border-bottom:0;
@@ -77,10 +88,6 @@ article table {
         
         &:first-child {
             border-left:0;
-        }
-
-        &:last-child {
-            border-right:0;
         }
 
         &.sortable {
@@ -107,28 +114,6 @@ article table {
             padding-left: 5px;
             vertical-align: top;
             content: " \25BC";
-        }
-    }
-
-    td {
-        .increase:after,
-        .decrease:after {
-            display: inline-block;
-            padding-left: 0.2em;
-        }
-
-        .increase:after {
-            content: "\25B2";
-            color: $negative-colour;
-        }
-
-        .decrease:after {
-            content: "\25BC";
-            color: $positive-colour;
-        }
-
-        &:last-child {
-            border-right:0;
         }
     }
 }
