--- a/app/assets/stylesheets/vehicle-licensing.scss
+++ b/app/assets/stylesheets/vehicle-licensing.scss
@@ -16,9 +16,6 @@
 
     th, td {
       white-space: normal;
-      &.numeric {
-        text-align: right;
-      }
     }
 
     th.count,
